--- a/app/views/libraries/index.html.erb
+++ b/app/views/libraries/index.html.erb
@@ -2,36 +2,59 @@
 
 <h1>Libraries</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Status</th>
-      <th>Date Borrow</th>
-      <th>Date Returned</th>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @libraries.each do |library| %>
-      <tr>
-        <td><%= library.title %></td>
-        <td><%= library.author %></td>
-        <td><%= library.status %></td>
-        <td><%= library.date %></td>
-        <td><%= library.date_returned %></td>
-        <td><%= library.name %></td>
-        <td><%= link_to 'Show', library %></td>
-        <td><%= link_to 'Edit', edit_library_path(library) %></td>
-        <td><%= link_to 'Destroy', library, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="row">
+  <div class="col-md-3 offset-md-2">
+    <%= search_form_for @q do |f| %>
+    <br> 
+      <div class="form-group">
+        <%= f.label :status_eq, "Status" %>
+        <br>
+        <%= f.select :status_eq, options_for_select(Library.statuses ,@q.status_eq), {},{class: "form-control"} %>
+      </div>
+    <br>
+      <%= f.submit "Search", class: "btn btn-primary" %>
     <% end %>
-  </tbody>
-</table>
-
+  </div>
+</div>
 <br>
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <table class="table">
+      <thead>
+        <tr>
+          <th><%= sort_link(@q, :title)%></th>
+          <th>Author</th>
+          <th>Status</th>
+          <th>Date Borrow</th>
+          <th>Date Returned</th>
+          <th>Name</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-<%= link_to 'New Library', new_library_path %>
+      <tbody>
+        <% @libraries.each do |library| %>
+          <tr>
+            <td><%= library.title %></td>
+            <td><%= library.author %></td>
+            <td><%= library.status %></td>
+            <td><%= library.date %></td>
+            <td><%= library.date_returned %></td>
+            <td><%= library.name %></td>
+            <td><%= link_to 'Show', library %></td>
+            <td><%= link_to 'Edit', edit_library_path(library) %></td>
+            <td><%= link_to 'Destroy', library, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-8 offset-md-2">
+    <%= link_to 'New Library', new_library_path %>
+  </div>
+</div>
+
+
